enlarging logo to prevent halo effect clipping

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,9 +15,10 @@
   }
 
   .logo {
-    width: 13.5rem;
+    width: 18rem;
     height: 100%;
     margin-top: 4em;
+    margin-bottom: -4.25em;
     color: var(--logo-color);
   }
   
@@ -28,7 +29,7 @@
   
   h1 {
     margin: 0;
-    margin-top: 1rem;
+    margin-top: .2rem;
     line-height: 1em;
     font-size: 4rem;
     font-weight: 600;
